--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -26,23 +26,18 @@ jobs:
 
     - name: Checkov GitHub Action
       uses: bridgecrewio/checkov-action@v12
+      continue-on-error: true
       with:
-        output_format: cli,sarif
-        output_file_path: console,results.sarif
+        output_format: cli, json
+        output_file_path: console,results.json
         directory: .
-  
-    - name: Upload SARIF file
-      uses: github/codeql-action/upload-sarif@v3
-      if: always()
-      with:
-        sarif_file: results.sarif
 
     - name: Publish security report to artifact
       if: always()
       uses: actions/upload-artifact@v4
       with:
         name: checkov-report
-        path: results.sarif
+        path: results.json
 
   plan:
     runs-on: ubuntu-latest
