--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -51,6 +51,9 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         terraform_version: 1.10.2
+    
+    - name: Terraform Init
+      run: terraform init
 
     - name: Terraform Plan
       run: terraform plan -out ./infraPlan
