--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -42,6 +42,9 @@ jobs:
   plan:
     runs-on: ubuntu-latest
     needs: validate-and-scan
+    permissions:
+      id-token: write # Require write permission to Fetch an OIDC token.
+      contents: read
 
     steps:
     - name: Checkout code
@@ -63,7 +66,7 @@ jobs:
       run: terraform init
 
     - name: Terraform Plan
-      run: terraform plan -out ./infraPlan
+      run: terraform plan -var=db_password=${ secrets.DB_PASSWORD } -out ./infraPlan
 
     - name: Post PR comment
       uses: borchero/terraform-plan-comment@v2
