--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -68,11 +68,14 @@ jobs:
     - name: Terraform Plan
       run: terraform plan -var=db_password=${{ secrets.DB_PASSWORD }} -var=prefix=tasb -out ./infraPlan
 
+    - name: Convert plan to JSON
+      run: terraform show -json ./infraPlan > ./infraPlan.json
+
     - name: Post PR comment
       uses: borchero/terraform-plan-comment@v2
       with:
         token: ${{ github.token }}
-        planfile: ./infraPlan
+        planfile: ./infraPlan.json
 
     - name: Upload plan
       uses: actions/upload-artifact@v4
